--- a/force-app/main/default/classes/DealManager.cls
+++ b/force-app/main/default/classes/DealManager.cls
@@ -1,7 +1,11 @@
 public inherited sharing class DealManager {
     
     private static final String DEFAULT_TYPE = 'Sale';
-
+    public static final Id DEAL_TYPE_SALE_ID = [SELECT Id FROM RecordType WHERE Name = 'Sale' LIMIT 1].Id;
+    public static final String DEAL_STATUS_CLOSED  = 'Closed';
+    public static final String DEAL_STATUS_CLOSED_WON  = 'Closed Won';
+    public static final String DEAL_STATUS_CLOSED_LOST  = 'Closed Lost';
+    
     public class DealWrapper {
         public Id type {get; set;}
         public Id property {get; set;}   
@@ -49,6 +53,13 @@ public inherited sharing class DealManager {
        return deal;
     }
 
+    public static Deal__c updateDealToCloseWon(Deal__c deal) {
+        deal.Status__c = DEAL_STATUS_CLOSED_WON;
+        update deal;
+        return deal;
+    }
+
+
     public static void deleteDealByID(Id id) {
         delete [SELECT id FROM Deal__c WHERE Id = :id];
     }
@@ -57,6 +68,14 @@ public inherited sharing class DealManager {
         delete [SELECT id FROM Deal__c WHERE Name = :name];
     }
 
-
+    public static List<Deal__c> getNotClosedSaleDealsByProperties(List<Id> propertyIds) {
+        return [
+                SELECT Id
+                FROM Deal__c
+                WHERE Property__c IN :propertyIds
+                AND Status__c NOT IN (:DEAL_STATUS_CLOSED_WON, :DEAL_STATUS_CLOSED, :DEAL_STATUS_CLOSED_LOST)
+                AND RecordTypeId = :DEAL_TYPE_SALE_ID
+        ];
+     }
 
 }
