--- a/force-app/main/default/classes/PropertyManager.cls
+++ b/force-app/main/default/classes/PropertyManager.cls
@@ -1,4 +1,4 @@
-public inherited sharing class PropertyManager {
+public class PropertyManager {
 
     private static final String DEFAULT_TYPE = 'Office';
 
