--- a/force-app/main/default/classes/SchduleRunBatchEndedLeaseDeals.cls
+++ b/force-app/main/default/classes/SchduleRunBatchEndedLeaseDeals.cls
@@ -1,11 +1,11 @@
-global class SchduleRunBatch  implements Schedulable {
+global class SchduleRunBatchEndedLeaseDeals  implements Schedulable {
     global void execute(SchedulableContext ctx) {
-        GetEndedLeaseDealsToPlatformEvents b = new GetEndedLeaseDealsToPlatformEvents();
+          BatchEndedLeaseDeals b = new BatchEndedLeaseDeals();
           database.executeBatch(b);
      }   
 }
 
 //Code to run schedule
-// SchduleRunBatch s = new SchduleRunBatch();
+// SchduleRunBatchEndedLeaseDeals s = new SchduleRunBatchEndedLeaseDeals();
 // String expression='0 0 6 * * ? *';
 // System.Schedule('Notify the contacts one day before the end of the rental', expression, s);
