--- a/force-app/main/default/classes/ClientService.cls
+++ b/force-app/main/default/classes/ClientService.cls
@@ -1,6 +1,6 @@
 
     public class ClientService {
-        public Lead getClient() {
+        public static Lead getClient() {
             return new Lead(LastName = 'Test', Email = 'test@test.test');
         }
     }
